--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <footer>
       <p><br>
-        <a ref="https://github.com/BYU-CS-260-Winter-2019/lab-1-JacobWhiz.git">Github Repository for this website (https://github.com/BYU-CS-260-Winter-2019/lab-1-JacobWhiz)</a>
+        <a ref="https://github.com/JacobWhiz/creativeproject1">Github Repository for this website (https://github.com/JacobWhiz/creativeproject1)</a>
       </p>
     </footer>
 </body>
